# pdfQnA

./: .gitignore  README.md  doc-reader.ipynb  main.py  pyproject.toml  requirements.txt  utils.py
chroma_db/: chroma.sqlite3
